@@ -32,6 +32,27 @@
 		}
 	}
 }
+.pp-posts-align-buttons {
+	.pp-post {
+		display: flex;
+		flex-direction: column;
+		height: 100%;
+	}
+	.pp-post-content-wrap {
+		flex-grow: 1;
+		display: flex;
+		flex-direction: column;
+		align-items: baseline;
+	}
+	.pp-post-content {
+		flex-grow: 1;
+	}
+	&.pp-posts-skin-event {
+		.pp-posts-button {
+			align-self: center;
+		}
+	}
+}
 .pp-post-separator-wrap {
 	margin-bottom: 15px;
 }
