@@ -1,5 +1,6 @@
 == 2.7.4 ==
-Release date: 
+Release date: March 29, 2023
+* Enhancement: Advanced Posts - Added option to automatically align buttons
 * Enhancement: Added compatibility for Swiper v8.45
 * Fixed: Info Grid & Carousel - Columns issue in Grid layout
 
